# Nice-AI-Agent

./: README.md  _entry.py  nice.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
nice/: main.py
nice/cli/: _slash.py  _spinner.py  ask.py  chat.py  code.py  commit.py  config_cmd.py  explain.py  fix.py  plan.py  review.py  test_cmd.py  version.py
nice/config/: context.py  settings.py
nice/core/: logger.py  reflection.py
nice/memory/: history.py
nice/planner/: executor.py  plan.py  planner.py
nice/plugins/: loader.py
nice/providers/: base.py  claude_provider.py  http_provider.py  ollama_provider.py  openai_provider.py  openai_provider_sync.py  registry.py
nice/tools/: file_tools.py  git_tools.py  registry.py  shell_tools.py  web_tools.py
scripts/: install.ps1  install.sh
