[project]
name = "nice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hatchling>=1.29.0",
    "httpx>=0.28.1",
    "nest-asyncio>=1.6.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typer>=0.26.0",
]

[project.scripts]
nice = "nice.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
